# homelab-devtools

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/actions/checkout-and-setup-python-env/: action.yml
.github/actions/checkout-code/: action.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: build.yml  ci.yml  release-pull-request.yml  release.yml  sync-release-to-dev.yml  test-build.yml  update-poetry-lock.yml
docs/adr/: 001-framework-selection.md  002-command-architecture.md  003-testing-strategy.md  004-error-handling-concept.md  005-logging-concept.md  006-cli-ux-design.md
src/: __init__.py
src/homelab_devtools/: __init__.py  cli_factory.py  command_registry.py  decorators.py  enums.py  errors.py  logger_factory.py  main.py
src/homelab_devtools/commands/: base_command.py  global_command.py  main_command.py
tests/: conftest.py  test_base_command.py  test_cli_factory.py  test_command_registry.py  test_logger_factory.py  test_main.py
